# agentic_ai_eval

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
examples/: coding_agent.md  computer_use_agent.md  customer_support_agent.md  deep_research_agent.md  diagram.mmd  research_pipeline_demo.py  run_example.py
src/agentic_ai_eval/: __init__.py  analytics.py  analyze.py  cli.py  human.py  ingest.py  llm.py  pipeline.py  report.py  scaffold.py  schema.py  server.py  stats.py  store.py
src/agentic_ai_eval/evals/: __init__.py  generate.py  graders.py  judge.py  metrics.py  runner.py
src/agentic_ai_eval/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  offline.py  openai_provider.py
tests/: test_graders_metrics.py  test_human_review.py  test_ingest_analyze.py  test_pipeline.py  test_providers.py  test_stats.py  test_store_analytics.py
