[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-ai-eval"
version = "0.1.0"
description = "A world-class evaluation pipeline for agentic AI features: understand the system, generate evals, and scaffold code from a description, sketch, or diagram."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Ibrahim Gunay" }]
keywords = ["evals", "agents", "llm", "anthropic", "claude", "evaluation", "ai-safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.6",
    "anthropic>=0.40",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
agentic-eval = "agentic_ai_eval.cli:app"

[project.urls]
Homepage = "https://github.com/ibrahimgunay/agentic_ai_eval"
Repository = "https://github.com/ibrahimgunay/agentic_ai_eval"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_ai_eval"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer relies on function-call defaults (typer.Option/Argument) by design.
"src/agentic_ai_eval/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
